@startuml class
top to bottom direction
title HELIX Platform – Class Diagram (Aligned with db/schema.sql and migrations)
skinparam classAttributeIconSize 8
skinparam shadowing false
skinparam roundcorner 8
skinparam classFontSize 11
skinparam classAttributeFontSize 10
skinparam classBorderColor #3C3489
skinparam classBackgroundColor #FFFFFF
skinparam packageBackgroundColor #F8F7F4
skinparam packageBorderColor #CCCAC0
skinparam ArrowColor #5A50B0
skinparam linetype ortho
skinparam dpi 300
skinparam defaultTextAlignment center

' ══════════════════════════════════════════════════════════════════════════
' PACKAGE 1: ACCESS CONTROL
' ══════════════════════════════════════════════════════════════════════════
package "Access Control" {
    enum Role {
        administrator
        blue_team
        red_team
        purple_team
        learner
    }
    class "User (PoC)" <<Entity>> {
        - id: INT
        - username: VARCHAR(50)
        - email: VARCHAR(100)
        - password_hash: VARCHAR(255)
        - role: Role
        - is_active: BOOLEAN
        - created_at: TIMESTAMP
        - last_login: TIMESTAMP
        --
        + login(username, password): void
        + logout(): void
        + hasPermission(action): boolean
        + updateProfile(data): void
        + updateLastLogin(): void
    }
    class "Session (PoC)" <<PHP Session>> {
        - session_id: VARCHAR(255)
        - user_id: INT
        - token: VARCHAR(255)
        - expires_at: DATETIME
        - last_active: DATETIME
        --
        + isValid(): boolean
        + invalidate(): void
        + renew(): void
    }
    "User (PoC)" "1" --> "0..*" "Session (PoC)" : creates >
    "User (PoC)" "1" --> "1" Role : assigned >
    "User (PoC)" -down[hidden]-> "Session (PoC)"
}
' ══════════════════════════════════════════════════════════════════════════
' PACKAGE 2: LOG & DETECTION
' ══════════════════════════════════════════════════════════════════════════
package "Log & Detection" #FDF3DC {
    class "LogEntry (PoC)" <<Entity>> {
        - id: INT
        - filename: VARCHAR(255)
        - source_ip: VARCHAR(45)
        - timestamp: TIMESTAMP
        - severity: ENUM(LOW, MEDIUM, HIGH, CRITICAL)
        - event_type: VARCHAR(100)
        - message: TEXT
        - raw_line: TEXT
        - ingested_at: TIMESTAMP
        - ingested_by: INT
        --
        + parse(rawData): void
        + normalize(): void
    }
    class "AnomalyScore (PoC)" <<Entity>> {
        - id: INT
        - log_entry_id: INT
        - score: FLOAT
        - severity_label: ENUM(LOW, MEDIUM, HIGH, CRITICAL)
        - computed_at: TIMESTAMP
        --
        + compute(logEntry): float
        + mapToSeverity(score): ENUM
    }
    class "Alert (PoC)" <<Entity>> {
        - id: INT
        - log_entry_id: INT
        - anomaly_score_id: INT
        - title: VARCHAR(255)
        - description: TEXT
        - severity: ENUM(LOW, MEDIUM, HIGH, CRITICAL)
        - status: ENUM(open, investigating, resolved)
        - assigned_to: INT
        - created_at: TIMESTAMP
        - updated_at: TIMESTAMP
        --
        + escalate(): void
        + resolve(): void
        + getDetails(): Map
    }
    class "MLModel (PoC)" <<Service>> {
        - id: INT
        - type: VARCHAR(50)
        - version: VARCHAR(20)
        - model_path: VARCHAR(255)
        - trained_at: DATETIME
        --
        + score(logEntry): float
        + retrain(data): void
    }
    class "DetectionRule (Future MVP)" <<Entity>> {
        - id: INT
        - name: VARCHAR(100)
        - condition: TEXT
        - threshold: FLOAT
        - severity: ENUM
        --
        + evaluate(event): boolean
    }
    "LogEntry (PoC)" -down[hidden]-> "AnomalyScore (PoC)"
    "AnomalyScore (PoC)" -down[hidden]-> "Alert (PoC)"
    "Alert (PoC)" -down[hidden]-> "MLModel (PoC)"
    "MLModel (PoC)" -down[hidden]-> "DetectionRule (Future MVP)"
    "LogEntry (PoC)" "1" --> "0..*" "AnomalyScore (PoC)" : scored as >
    "AnomalyScore (PoC)" "1" --> "0..*" "Alert (PoC)" : triggers >
    "MLModel (PoC)" "1" ..> "*" "AnomalyScore (PoC)" : computes >
    "DetectionRule (Future MVP)" "1" ..> "*" "Alert (PoC)" : triggers >
}
' ══════════════════════════════════════════════════════════════════════════
' PACKAGE 3: RED TEAM
' ══════════════════════════════════════════════════════════════════════════
package "Red Team" #FFE0E6 {
    class "ScanResult (PoC)" <<Entity>> {
        - id: INT
        - performed_by: INT
        - target: VARCHAR(255)
        - port: INT
        - protocol: VARCHAR(10)
        - status: ENUM(open, closed, filtered)
        - scanned_at: TIMESTAMP
        --
        + formatReport(): String
    }
    class "Writeup (Future MVP)" <<Entity>> {
        - id: INT
        - author_id: INT
        - title: VARCHAR(200)
        - content: TEXT
        - tags: JSON
        - status: ENUM(draft, pending, published, rejected)
        - created_at: TIMESTAMP
        --
        + submit(): void
        + publish(): void
    }
    "ScanResult (PoC)" -down[hidden]-> "Writeup (Future MVP)"
}
' ══════════════════════════════════════════════════════════════════════════
' PACKAGE 4: FILE INTEGRITY MONITORING
' ══════════════════════════════════════════════════════════════════════════
package "File Integrity Monitoring" #FFECD2 {
    class "FIMBaseline (PoC)" <<Entity>> {
        - id: INT
        - target_path: VARCHAR(512)
        - baseline_data: TEXT
        - file_count: INT
        - created_by: INT
        - created_at: TIMESTAMP
        --
        + create(path): void
        + load(): Map
    }
    class "FIMScanResult (PoC)" <<Entity>> {
        - id: INT
        - baseline_id: INT
        - file_path: VARCHAR(512)
        - sha256: VARCHAR(64)
        - file_size: BIGINT
        - status: ENUM(added, modified, deleted, unchanged)
        - scanned_at: TIMESTAMP
        --
        + getChanges(): List
    }
    class "FileIntegrityMonitor (PoC)" <<Service>> {
        - java_module_path: String
        --
        + computeBaseline(path): Map
        + verifyIntegrity(baselineId): List
        + getHistory(userId): List
    }
    "FIMBaseline (PoC)" -down[hidden]-> "FIMScanResult (PoC)"
    "FIMScanResult (PoC)" -down[hidden]-> "FileIntegrityMonitor (PoC)"
    "FIMBaseline (PoC)" "1" --> "0..*" "FIMScanResult (PoC)" : verified by >
    "FileIntegrityMonitor (PoC)" ..> "FIMBaseline (PoC)" : manages >
    "User (PoC)" "1" --> "0..*" "FIMBaseline (PoC)" : creates (created_by) >
}
' ══════════════════════════════════════════════════════════════════════════
' PACKAGE 5: AI ASSISTANCE
' ══════════════════════════════════════════════════════════════════════════
package "AI Assistance" #D4F5D6 {
    class "ChatSession (PoC)" <<Entity>> {
        - id: INT
        - user_id: INT
        - alert_id: INT
        - message_role: ENUM(user, assistant)
        - content: TEXT
        - sent_at: TIMESTAMP
        --
        + sendMessage(role, content): void
        + getHistory(): List
    }
    class "AIService (PoC)" <<Service>> {
        - api_key: String
        - model: VARCHAR(50)
        - max_tokens: INT
        --
        + generateResponse(prompt, context): String
        + summarizeAlert(alert): String
        + suggestRemediation(alert): String
    }
    "ChatSession (PoC)" -down[hidden]-> "AIService (PoC)"
    "ChatSession (PoC)" "1" ..> "1" "AIService (PoC)" : uses >
    "User (PoC)" "1" --> "0..*" "ChatSession (PoC)" : initiates (user_id) >
}
' ══════════════════════════════════════════════════════════════════════════
' PACKAGE 9: SERVICES
' ══════════════════════════════════════════════════════════════════════════
package "Services" {
    class "DashboardService (PoC)" <<Service>> {
        --
        + getActiveAlertsBySeverity(): Map
        + getLogIngestionMetrics(): Map
        + getMlScoreSummary(): Map
        + renderRoleView(role): View
    }
    class "ReportService (Future MVP)" <<Service>> {
        --
        + generatePdf(scope): File
        + compileTimeline(incidentId): List
        + exportData(): File
    }
    "DashboardService (PoC)" -down[hidden]-> "ReportService (Future MVP)"
}
' ══════════════════════════════════════════════════════════════════════════
' CROSS-PACKAGE RELATIONSHIPS (aligned with schema.sql FKs)
' ══════════════════════════════════════════════════════════════════════════
"User (PoC)" -down[hidden]-> "LogEntry (PoC)"
"LogEntry (PoC)" -down[hidden]-> "ScanResult (PoC)"
"ScanResult (PoC)" -down[hidden]-> "FIMBaseline (PoC)"
"FIMBaseline (PoC)" -down[hidden]-> "ChatSession (PoC)"
"ChatSession (PoC)" -down[hidden]-> "DashboardService (PoC)"

"User (PoC)" "1" --> "0..*" "LogEntry (PoC)" : ingests (ingested_by) >
"User (PoC)" "1" --> "0..*" "Alert (PoC)" : assigned to (assigned_to) >
"User (PoC)" "1" --> "0..*" "ScanResult (PoC)" : performs (performed_by) >
"DashboardService (PoC)" ..> "Alert (PoC)" : aggregates >
"DashboardService (PoC)" ..> "LogEntry (PoC)" : counts >
"DashboardService (PoC)" ..> "MLModel (PoC)" : summarizes >
' ══════════════════════════════════════════════════════════════════════════
' NOTES
' ══════════════════════════════════════════════════════════════════════════
note right of "Session (PoC)"
  PHP in-memory session management.
  NOT persisted in database.
  Managed via PHP $_SESSION superglobal.
end note
note right of "MLModel (PoC)"
  PoC: Standalone Python script
  invoked via PHP exec()
  Uses scikit-learn Isolation Forest
end note
note right of "AIService (PoC)"
  PoC: OpenAI API integration
  Context-aware prompt engineering
  Session-bound conversation history
end note
note right of "ChatSession (PoC)"
  Denormalized schema: each row
  stores a single message with
  role (user/assistant) and content.
  session_id groups messages by conversation.
end note
note right of "FileIntegrityMonitor (PoC)"
  Invokes Java module via
  shell_exec() for SHA-256
  hashing and file scanning.
end note
note bottom of "DetectionRule (Future MVP)"
  Future MVP: Rule engine with
  threshold, temporal correlation,
  and pattern-matching rules
end note
@enduml
